# back-blog-project/controllers/userController.js
@@ -12,41 +12,14 @@ class PostController {
         const userPassword = req.body.password;
 
         try {
-            /*
-            const user = {userLogin, userPassword};
-            if ((user.userLogin.length > 5) && (user.userPassword.length > 5)){
-                console.log(user);
-
-                //DB
-                try {
-                    const user = {
-                        login: userLogin,
-                        password: userPassword
-                    };
-                    const result = await UserModel.create(user);
-                    console.log(result);
-                    console.log(user);
-                }catch(err) {
-                    console.log(err);
-                    res.status(404).json('error in DB');
-                } finally {
-                    console.log("Подключение закрыто");
-                    res.status(200).send(user);
-                }
-            
-            }
-            else {
-                console.log('error body have empty login or password');
-                res.status(404).json('error body have empty login or password');
-            }
-            */
             const userData = await userService.registration(userLogin, userPassword);
-
+            console.log('userData ' + userData);
             // TODO remove refreshtoken from userData?
             res.cookie("refreshToken", userData.refreshToken, {
               maxAge: 30 * 24 * 60 * 60 * 1000,
               httpOnly: true,
             });
+            console.log('rescookie ' + res);
             return res.json(userData);
 
         } catch(err) {
@@ -68,72 +41,39 @@ class PostController {
         } catch (e) {
           next(e);
         }
+    }
+
+    async Logout(req, res, next) {
+        try {
+          const { refreshToken } = req.cookies;
+          const token = await userService.logout(refreshToken);
+          
+          res.clearCookie("refreshToken");
+          return res.sendStatus(200);
+        } catch (e) {
+          next(e);
+        }
+    }
+
+    async Refresh(req, res, next) {
+        try {
+          const { refreshToken } = req.cookies;
+    
+          const userData = await userService.refreshToken(refreshToken);
+    
+          res.cookie("refreshToken", userData.refreshToken, {
+            maxAge: 30 * 24 * 60 * 60 * 1000,
+            httpOnly: true,
+          });
+          return res.json(userData);
+        } catch (e) {
+          next(e);
+        }
       }
-
-    async generateToken (req, res, next) {
-        console.log('generateToken');
-
-        if(!req.body) return res.sendStatus(400);
-
-        //DB
-        try {
-            let jwtSecretKey = process.env.SECRET_KEY;
-            let data = {
-                Login: req.body.Login,
-                Password: req.body.Password
-            }
-
-            const token = jwt.sign(data, jwtSecretKey);
-            const tokenDB = {
-                Token: token
-            }
-            await TokenSchema.create(tokenDB);
-            res.status(200).send(token);
-
-        }catch(err) {
-            console.log(err);
-            res.status(404).json('error in DB');
-        } finally {
-            console.log("Подключение закрыто");
-        }
-    }
-
-    async verifyToken (req, res, next) {
-        console.log('verifyToken');
-
-        if(!req.body) return res.sendStatus(400);
-
-        //DB
-        try {
-            let jwtSecretKey = process.env.SECRET_KEY;
-            let data = {
-                Login: req.body.Login,
-                Password: req.body.Password
-            }
-
-            const token = jwt.sign(data, jwtSecretKey);
-            let obj = await TokenSchema.find({Token: token});
-            console.log(obj);
-            if (Object.keys(obj).length === 0)
-                throw new Error("Такого пользователя нет");
-            res.status(200).send("авторизация прошла успешно");
-
-        }catch(err) {
-            console.log(err);
-            res.status(404).json('error in DB');
-        } finally {
-            console.log("Подключение закрыто");
-        }
-    }
 
     async Hello (req, res) {
         console.log('hello');
-        res.status(200).json('hello pet');
-      }
-
-    async Goodbye (req, res) {
-        console.log('goodbye');
-        res.status(200).json('goodbye pet');
+        res.status(200).json('hello user');
     }
 
     async GetAllUsers (req, res) {
